kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec: 
  replicas: 3
  selector:
    matchLabels:
      component: fbs-api
  template:
    metadata:
      labels:
        component: fbs-api
    spec: 
      containers:
        - name: api
          image: jeremybamaddox/footballsteps-api
          ports:
            - containerPort: 4000
