kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec: 
  replicas: 3
  selector:
    matchLabels:
      component: fbs-client
  template: 
    metadata: 
      labels:
        component: fbs-client
    spec: 
      containers:
        - name: client
          image: jeremybamaddox/footballsteps-client
          ports:
            - containerPort: 3000
