kubernetes/simulations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulations-deployment
spec: 
  replicas: 3
  selector:
    matchLabels:
      component: fbs-sim
  template:
    metadata:
      labels:
        component: fbs-sim
    spec:
      containers:
        - name: simulations
          image: jeremybamaddox/footballsteps-simulations
          ports:
            - containerPort: 4001
