kubernetes/simulations-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulations-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: simulations-redis
  template:
    metadata:
      labels:
        component: simulations-redis
    spec:
      containers:
        - name: simulations-redis
          image: redis:6.0
          ports:
            - containerPort: 6379
