kubernetes/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec: 
  type: ClusterIP
  selector:
    component: fbs-api
  ports:
    - port: 4000
      targetPort: 4000
