kubernetes/api-redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-redis
  ports:  
    - port: 6379
      targetPort: 6379
