kubernetes/simulations-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulations-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: fbs-sim
  ports:
    - port: 4001
      targetPort: 4001
