kubernetes/simulations-redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulations-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: simulations-redis
  ports:  
    - port: 6379
      targetPort: 6379
